# scrapy-opensearch

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pdm.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  scrapy.cfg  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  extensions.txt  user-data
config/dprint/: dprint.json
src/scrapy_opensearch/: __init__.py  defaults.py  pipelines.py
tests/: Dockerfile  conftest.py  run_tests.sh  scrapy.cfg
tests/dummy_project/: middlewares.py  settings.py
tests/dummy_project/spiders/: dummy_spider.py
tests/scrapy_project/: settings.py
tests/scrapy_project/spiders/: dummy_spider.py
tests/test_scrapy_opensearch/: test_pipelines.py
