[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
lint = ["flake8", "black", "mypy", "pre-commit", "check-manifest"]
test = ["pytest", "pytest-cov", "pytest-asyncio", "tox"]
doc = ["mkdocs"]
dev = [
    "check-manifest",
    "pre-commit",
    "ipython",
    "-e file:///${PROJECT_ROOT}#egg=scrapy-opensearch",
]

[project]
name = "scrapy-opensearch"
description = "Scrapy OpenSearch."
authors = [{ name = "Zachary Wilson", email = "zwilson.development@gmail.com" }]
dependencies = ["scrapy", "opensearch-py"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "proprietary" }
dynamic = ["version"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=xml:cover/coverage.xml --cov-report=html:cover/html"
testpaths = "tests"
asyncio_mode = "auto"

[tool.mypy]
files = "src"
exlude = ["tests", "__pypackages__"]
