[project]
name = "scrapy-opensearch"
description = "Scrapy OpenSearch."
authors = [{ name = "Zachary Wilson", email = "zwilson.development@gmail.com" }]
dependencies = ["scrapy", "opensearch-py"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[build-system]
requires = ["pdm-backend", "cython"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test = "pytest"


[tool.pdm.dev-dependencies]
lint = ["flake8", "black", "mypy", "pre-commit", "check-manifest"]
test = ["pytest", "pytest-cov", "pytest-asyncio", "tox"]
dev = ["check-manifest", "pre-commit", "ipython"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=xml:cover/coverage.xml --cov-report=html:cover/html"
testpaths = "tests"
norecursedirs = [".devcontainer", "=", ".vscode", "cover", "bin"]
asyncio_mode = "auto"

[tool.mypy]
files = "src"
