[metadata]
name = scrapy_opensearch
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    opensearch-py
    scrapy
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test =
    hypothesis
    mypy
    pre-commit
    pytest
    pytest-asyncio
    pytest-cov
    setup-cfg-fmt
    tox
